// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly desktop version 1`] = `
<div>
  <div
    class="subtitle"
  >
    General
  </div>
  <div>
    mock-select-control id:
    select-lang
    label:
    Language
    url:
    options:
    [{"label":"Deutsche","value":"de"},{"label":"English","value":"en"},{"label":"Español","value":"es"},{"label":"日本語","value":"ja"},{"label":"简体中文","value":"zh-cn"},{"label":"繁體中文","value":"zh-tw"}]
    <input
      class="select-control"
    />
  </div>
  <div>
    mock-select-control id:
    set-notifications
    label:
    Desktop Notifications
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
    />
  </div>
</div>
`;

exports[`should render correctly web version 1`] = `
<div>
  <div
    class="subtitle"
  >
    General
  </div>
  <div>
    mock-select-control id:
    select-lang
    label:
    Language
    url:
    options:
    [{"label":"Deutsche","value":"de"},{"label":"English","value":"en"},{"label":"Español","value":"es"},{"label":"日本語","value":"ja"},{"label":"简体中文","value":"zh-cn"},{"label":"繁體中文","value":"zh-tw"}]
    <input
      class="select-control"
    />
  </div>
</div>
`;
